@@ -1,5 +1,7 @@
 *SVN*
 
+* Allow using named routes in ActionController::TestCase before any request has been made. Closes #11273 [alloy]
+
 * Fixed that sweepers defined by cache_sweeper will be added regardless of the perform_caching setting. Instead, control whether the sweeper should be run with the perform_caching setting. This makes testing easier when you want to turn perform_caching on/off [DHH]
 
 * Make MimeResponds::Responder#any work without explicit types. Closes #11140 [jaw6]
